# pi-governance-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  RELEASE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  docs_feedback.md  mcp_setup_issue.md  memory_governance_feedback.md  usability_feedback.md
crates/pi-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/pi-cli/src/: main.rs
crates/pi-cli/tests/: cli_usability_tests.rs  mcp_compat_tests.rs  mcp_onboarding_tests.rs  observability_cli_tests.rs  rc8_tests.rs  rc9_tests.rs
crates/pi-core/: Cargo.toml
crates/pi-core/src/: config.rs  lib.rs  policy.rs  schema.rs  types.rs
crates/pi-core/tests/: policy_tests.rs
crates/pi-governance/: Cargo.toml
crates/pi-governance/src/: engine.rs  graph.rs  lib.rs  simulation.rs  workflow.rs  workflow_intelligence.rs
crates/pi-governance/src/quality/: memory.rs  mod.rs  recall.rs  relationship.rs  store.rs
crates/pi-governance/tests/: engine_tests.rs  observability_tests.rs
crates/pi-mcp/: CHANGELOG.md  Cargo.toml
crates/pi-mcp/src/: lib.rs  stdio.rs
crates/pi-mcp/tests/: mcp_server_tests.rs
crates/pi-retrieval/: Cargo.toml
crates/pi-retrieval/src/: lib.rs  packing.rs  scoring.rs  simple.rs
crates/pi-retrieval/tests/: retrieval_tests.rs
crates/pi-store/: Cargo.toml
crates/pi-store/src/: backup.rs  config.rs  integrity.rs  jsonl.rs  lib.rs  lock.rs  migrations.rs  portable.rs  privacy.rs  reconcile.rs
crates/pi-store/tests/: jsonl_store_tests.rs  privacy_purge_tests.rs  reconciliation_fixture_tests.rs  store_integrity_tests.rs
crates/pi-store/tests/fixtures/pi-governance-conformance/: duplicate-input.json  filtered-bundle.json  full-bundle.json  reconciliation-expected.json  redacted-bundle.json
docs/: DEPLOYMENT_CHECKLIST.md  GITHUB_RELEASE_PLAN.md  INSTALL.md  MCP_REGISTRY_PREP.md  MCP_SERVER_SHARING.md  MCP_TROUBLESHOOTING.md  MEMORY_POISONING.md  NON_GOALS.md  PACKAGING.md  PI_FUNCTIONALITY_SCOPE_GUIDE.md  PI_PERSISTENT_INTELLIGENCE_COMPATIBILITY.md  PUBLIC_TESTING.md  PUBLISHING_CHECKLIST.md  RELEASE_STRATEGY.md  STABLE_V1_GATE.md  WIKI_INDEX.md  product-guide.html
docs/interop/: RC9_AGENT_INTEROP_PROMPT.md
docs/schema/: export-bundle.md  mcp.md  patch.md  policy.md  record.md
docs/wiki/: 01-Overview.md  02-Core-Concepts.md  03-Installation.md  04-CLI-Guide.md  05-MCP-Setup.md  06-Agent-Interoperability.md  07-Governance-Workflows.md  08-Retrieval-Guide.md  09-Maintenance-And-Audit.md  10-Export-Import-And-Redaction.md  11-Schema-Reference.md  12-Security-And-Memory-Poisoning.md  13-Release-And-Deployment.md  14-QA-And-Test-Matrix.md  15-Troubleshooting.md  16-Roadmap-And-Deferred-Features.md  Home.md
examples/: agent-instructions.md  codebase-memory-mcp-plus-pi.md
examples/skills/mcp-smoke-test/: SKILL.md
examples/skills/pi-memory-review/: SKILL.md
examples/skills/react-preview-debugging/: SKILL.md
examples/skills/rust-release-check/: SKILL.md
schemas/: pi-export.schema.json  pi-mcp-response.schema.json  pi-patch.schema.json  pi-policy.schema.json  pi-record.schema.json
