[workspace]
members = [
  "crates/pi-core",
  "crates/pi-store",
  "crates/pi-retrieval",
  "crates/pi-governance",
  "crates/pi-mcp",
  "crates/pi-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "1.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Mont3ll/pi-governance-rs"
description = "Local-first governed memory CLI and MCP stdio server for AI agents."
readme = "README.md"
keywords = ["mcp", "memory", "governance", "ai-agents"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }

pi-governance-core = { version = "1.1.0", path = "crates/pi-core", package = "pi-governance-core" }
pi-governance-store = { version = "1.1.0", path = "crates/pi-store", package = "pi-governance-store" }
pi-governance-retrieval = { version = "1.1.0", path = "crates/pi-retrieval", package = "pi-governance-retrieval" }
pi-governance-engine = { version = "1.1.0", path = "crates/pi-governance", package = "pi-governance-engine" }
pi-governance-mcp = { version = "1.1.0", path = "crates/pi-mcp", package = "pi-governance-mcp" }
