[package]
name = "pi-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "pi"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
pi-core.workspace = true
pi-store.workspace = true
pi-retrieval.workspace = true
pi-governance.workspace = true
pi-mcp.workspace = true
