[package]
name = "pi-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "pi"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
serde_json.workspace = true
serde.workspace = true
pi-core.workspace = true
pi-store.workspace = true
pi-retrieval.workspace = true
pi-governance.workspace = true
pi-mcp.workspace = true
