[package]
name = "pi-governance-rs"
version = "1.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "pi"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
serde_json.workspace = true
serde.workspace = true
pi-governance-core.workspace = true
pi-governance-store.workspace = true
pi-governance-retrieval.workspace = true
pi-governance-engine.workspace = true
pi-governance-mcp.workspace = true
