[package]
name = "pi-governance-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
uuid.workspace = true
