[package]
name = "pi-governance"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
pi-core.workspace = true
pi-store.workspace = true
pi-retrieval.workspace = true
