[package]
name = "pi-governance-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
pi-governance-core.workspace = true
pi-governance-store.workspace = true
pi-governance-retrieval.workspace = true
