[package]
name = "pi-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
pi-core.workspace = true
pi-governance.workspace = true
pi-retrieval.workspace = true

[dev-dependencies]
pi-store.workspace = true
