[package]
name = "pi-governance-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
pi-governance-core.workspace = true
pi-governance-engine.workspace = true
pi-governance-retrieval.workspace = true

[dev-dependencies]
pi-governance-store.workspace = true
